<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/imageButton3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoneOrdersActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@color/Clear"
                    android:contentDescription="@string/nazad"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:src="@drawable/arrow_back" />

                <EditText
                    android:id="@+id/searchOrders"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="31dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="31dp"
                    android:background="@drawable/input_search"
                    android:drawableRight="@drawable/magnifying_glass_9_svgrepo_com"
                    android:hint="@string/input_searc"
                    android:inputType="text"
                    android:paddingHorizontal="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="20sp" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="200dp"
                android:background="@drawable/lk_button"
                android:contentDescription="@string/button_done_orders"
                android:text="@string/button_done_orders" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="300dp"
                android:background="@drawable/lk_button"
                android:contentDescription="@string/button_order"
                android:text="@string/button_done_orders" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="400dp"
                android:background="@drawable/lk_button"
                android:contentDescription="@string/button_done_orders"
                android:text="@string/button_done_orders" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
